# frictionless-py

./: .coveragerc  .env.example  .gitattributes  .gitignore  .gitmodules  .google.json.enc  .travis.yaml  .travis.yml  404.html  404.md  CHANGELOG.md  CITATION.cff  CNAME  CONTRIBUTING.md  Dockerfile  LICENSE  LICENSE.md  MAINTAINER.md  MANIFEST.in  MIGRATION.md  Makefile  README.md  capital.resource.yaml  country.package.json  datapackage.json  index.html  index.md  livemark.yaml  package.dot  pylama.ini  pyproject.toml  pyrightconfig.json  pytest.ini  resource.json  setup.py  shippable.yaml  test.sh  tox.ini
.github/: codecov.yaml  issue_template.md  pull_request_template.md  stale.yaml  stale.yml
.github/workflows/: general.yaml  general.yml  project.yaml  release.yml
.vim/: coc-settings.json
blog/: 2022-08-15-v5-beta.html  2022-08-15-v5-beta.md  2022-08-22-frictionless-framework-v5.md  index.html  index.md
blog/2022/: 08-22-frictionless-framework-v5.html  08-22-frictionless-framework-v5.md  09-07-github-integration.html  09-07-github-integration.md  11-07-zenodo-integration.html  11-07-zenodo-integration.md
cli/: main.py
data/: accent.csv  adjust-floating-point-error.xlsx  analysis-data.csv  article.html  article.md  ascii-notvalid.csv  ascii.csv  bad.schema.yaml  blacklisted_value.csv  blank-rows-no-fields.csv  blank-rows.csv  capital-3.csv  capital-invalid.csv  capital.inquiry-example.yaml  capital.inquiry.yaml  capital.package.yaml  capital.resource-bad.yaml  capital.resource-test.yaml  capital.resource.yaml  capitals.csv  case_insensitive_headers.csv  cast-int-to-string-issue-1251.xls  cast-int-to-string-issue-1251.xlsx  checklist.json  checklist.yaml  chunk1.csv  chunk2.csv  chunk2.headless.csv  chunk3.csv  ckan.package-sameresourcename.yaml  ckan.package.json  ckan.package.yaml  construction.html  countries-cleaned.csv  countries-invalid.yaml  countries-truefalsevalues.csv  countries.csv  countries.json  countries.pipeline.yaml  countries.resource.yaml  (+231 more)
data/cassettes/: test_ckan_adapter_catalog.yaml  test_ckan_adapter_catalog_check_ignore_packages.yaml  test_ckan_adapter_catalog_check_package_resources.yaml  test_ckan_adapter_catalog_limit_packages.yaml  test_ckan_adapter_read.yaml  (+299 more)
docs/: Makefile  api-design.rst  api-reference.py  authors.py  basic-examples.html  basic-examples.md  batch.rst  build.py  changelog.py  cli.rst  conf.py  contributing.py  describing-data.md  errors-reference.py  extension-guide.md  extension-guide.py  extracting-data.md  faq.md  formats-reference.py  getting-started.html  getting-started.md  index.rst  introduction-guide.md  make.bat  migration-guide.md  pipeline.rst  processors.rst  quickstart.rst  reports.rst  schemes-reference.py  shemes-reference.py  transforming-data.md  tutorial.rst  universe.html  universe.md  validating-data.md  validators.rst  web.rst  welcome-page.py  working-with-aws.md  (+34 more)
docs-legacy/: api-reference.py  authors.py  changelog.py  describing-data.py  extracting-data.py  getting-started.py  introduction-guide.py  migration-guide.py  transforming-data.py  validating-data.py  working-with-bigquery.py  working-with-dataflows.py  working-with-elastic.py  working-with-excel.py  working-with-gsheet.py  working-with-json.py  working-with-local.py  working-with-ods.py  working-with-remote.py  working-with-text.py
examples/: april-to-may-12th-2010.xls  ckan.py  contrib_checks.py  custom_check.py  custom_preset.py  custom_profile.py  datapackage.py  datapackages.py  dropbox.py  duplicate_columns.csv  empty_rows_custom.csv  fail_fast_two_schema_errors.csv  headerless_columns.csv  inspect.py  invalid.py  nested.py  schema_invalid_pk_array.json  schema_valid_full.json  sequential_column.py  table.py  tables.py  test_schema.json  valid.csv
features/: datapackages.yml  defective_rows.yml  duplicate_rows.yml  empty_rows.yml  empty_rows_custom.yml  empty_rows_multiple.yml  fail_fast_two_schema_errors.yml  fail_fast_two_structure_errors.yml  jungle.yml  required_false.yml  row_limit_schema.yml  row_limit_structure.yml  unique_field.yml
frictionless/: __init__.py  __main__.py  check.py  config.py  conftest.py  control.py  controls.py  detector.py  dialect.py  dialects.py  error.py  errors.py  exception.py  exceptions.py  field.py  field2.py  file.py  header.py  helpers.py  inquiry.py  interfaces.py  layout.py  loader.py  location.py  metadata.py  metadata2.py  models.py  package.py  parser.py  pipeline.py  platform.py  plugin.py  pointer.py  query.py  records.py  report.py  resource.py  row.py  row2.py  row3.py  (+13 more)
goodtables/: VERSION  __init__.py  __main__.py  cells.py  check.py  cli.py  compat.py  config.py  controls.py  decorators.py  descriptor.py  dialects.py  error.py  errors.py  exceptions.py  headers.py  helpers.py  inquiry.py  inspector.py  job.py  metadata.py  note.py  plugin.py  program.py  query.py  register.py  registry.py  report.py  row.py  server.py  spec.json  spec.py  system.py  task.py  timer.py  validate.py
pages/: basic-examples.md  getting-started.md  quick-start.md  universe.md
portal/: .gitignore  Dockerfile  docker-compose.yml  docusaurus.config.js  package.json  sidebars.js
requirements/: base.txt  local.txt  py2.txt  test-py2.txt  test.txt
scripts/: docs-legacy.py  docs.py  docs2.py
site/: .gitignore  Dockerfile  docker-compose.yml  docusaurus.config.js  package.json  sidebars.js
tabular_validator/: __init__.py  compat.py  exceptions.py
tests/: __init__.py  base.py  conftest.py  pipeline.py  structure.py  test_batch.py  test_cells.py  test_cli.py  test_datatable.py  test_decorators.py  test_descriptor.py  test_detector.py  test_error.py  test_errors.py  test_features.py  test_field.py  test_file.py  test_header.py  test_headers.py  test_helpers.py  test_inquiry.py  test_inspector.py  test_jungle.py  test_metadata.py  test_package.py  test_pipeline.py  test_pointer.py  test_register.py  test_registry.py  test_report.py  test_resource.py  test_row.py  test_scenarios.py  test_schema.py  test_spec.py  test_structure.py  test_system.py  test_table.py  test_type.py  test_utilities.py  (+1 more)
(+2721 files in other folders)
